add comp and point UX, update list

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             background-color: cadetblue;
         }
 
+        .round-head {
+            color: #f1e1ae;
+            font-size: 2.5rem;
+            text-align: center;
+        }
+
         .btnDiv {
             display: flex;
             justify-content: center;
@@ -30,7 +36,7 @@
         }
 
         .paper-btn {
-            color: #cfc99a;
+            color: #7ca1e2;
             background-color: #fcfff0
         }
 
@@ -91,14 +97,22 @@
             transform: translateY(10px);
         }
 
-        .points-head {
-            font-weight: 700;
-            font-size: 2rem;
+        .comp-choice-announce {
+            color: #f1e1ae;
+            font-size: 1.5rem;
+            text-align: center;
         }
 
-        .textDiv {
-            display: flex;
-            flex-direction: row;
+        .comp-head {
+            color: #f1e1ae;
+            font-size: 1.5rem;
+            text-align: center;
+        }
+
+        .hum-head {
+            color: #f1e1ae;
+            font-size: 1.5rem;
+            text-align: center;
         }
 
     </style>
@@ -106,6 +120,5 @@
 </head>
 <body>
     <div class="btnDiv"></div>
-    <div class="textDiv"></div>
 </body>
 </html>
