fix gameOver screen bug, add style

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
 
         .round-head {
-            color: #f1e1ae;
+            color: #cbe2c5;
             font-size: 2.5rem;
             text-align: center;
         }
@@ -98,22 +98,44 @@
         }
 
         .comp-choice-announce {
-            color: #f1e1ae;
-            font-size: 1.5rem;
+            color: #7e9595;
+            background-color: #2ac3c5;
+            font-size: 2rem;
             text-align: center;
         }
 
-        .comp-head {
-            color: #f1e1ae;
-            font-size: 1.5rem;
+        .comp-choice {
+            color: #a1158a;
+            font-weight: 700;
+            background-color: #2ac3c5;
+            font-size: 2rem;
             text-align: center;
         }
 
-        .hum-head {
+        .human-computer-scores {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
             color: #f1e1ae;
             font-size: 1.5rem;
+        }
+
+        .hum-head, .comp-head {
+            color: #f1e1ae;
+            font-size: 1.5rem;
+        }
+
+        #winner-text {
+            font-size: 4rem;
             text-align: center;
         }
+
+        .play-again {
+            
+        }
+
+
 
     </style>
 
