Complete stylizations... for now!

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             color: #cbe2c5;
             font-size: 2.5rem;
             text-align: center;
+            margin-top: 40px
         }
 
         .btnDiv {
@@ -98,16 +99,16 @@
         }
 
         .comp-choice-announce {
-            color: #7e9595;
-            background-color: #2ac3c5;
-            font-size: 2rem;
+            color: #cbe2c5;
+            font-size: 2.5rem;
             text-align: center;
+            margin-top: 50px;
         }
 
         .comp-choice {
-            color: #a1158a;
+            color: #e2ff09;
+            background-color: #0C7580;
             font-weight: 700;
-            background-color: #2ac3c5;
             font-size: 2rem;
             text-align: center;
         }
@@ -124,15 +125,50 @@
         .hum-head, .comp-head {
             color: #f1e1ae;
             font-size: 1.5rem;
+            margin: 0 100px 0 100px;
+        }
+
+        .round-result {
+            color: #e19dd6;
+            background-color: #0C7580;
+            font-weight: 700;
+            font-size: 2rem;
+            text-align: center;
+        }
+
+        .game-over {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .play-again {
+            color:#044148;
+            background-color: #ca3b13;
+            font-weight: 700;
+            font-size: 3.5rem;
+            border-radius: 20px;
+            border: none;
+            box-shadow: 5px 5px 5px #0C7580;
+            padding: 1rem;
+            margin: 0.5rem;
+            max-width: 50%;
+            min-width: 300px;
+            display: flex;
+            justify-content: center;
+            flex-shrink: 0;
+        }
+
+        .play-again:hover {
+            background-color: #ff9a7e;
+            cursor: pointer;
         }
 
         #winner-text {
             font-size: 4rem;
+            color: #f1ff88;
             text-align: center;
-        }
-
-        .play-again {
-            
         }
 
 
