update hum/comp centering issue

--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
         .human-computer-scores {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
-            align-items: center;
+            justify-content: center;
             color: #f1e1ae;
             font-size: 1.5rem;
         }
